<resources>
    <string name="app_name">JXR Scenecore Tests</string>
    <string name="common_test_panel_name">Common Test Panel</string>
    <string name="activity_panel_name">Create Activity Panel</string>
    <string name="anchor_test">Anchor Test</string>
    <string name="switch_to_fsm_button_text">Switch To FSM</string>
    <string name="switch_to_hsm_button_text">Switch To HSM</string>
    <string name="spatial_capabilities_test">Spatial Capabilities Test</string>
    <string name="spawn_anchor_space_button_text">Spawn Anchor Space</string>
    <string name="cuj_activity_panel_test">Activity Panel Test Case</string>
    <string name="cuj_anchor_test">Anchoring Test Case</string>
    <string name="cuj_spatial_capabilities_test">Spatial Capabilities Test Case</string>
    <string name="cuj_visibility_test">Show/Hide Entity Test Case</string>
    <string name="cuj_fsm_hsm_transition_test">Home Space Mode / Full Space Mode Test Case</string>
    <string name="cuj_spatial_user_test">Spatial User Test Case</string>
    <string name="cuj_environment_test">SetEnvironment Test Case</string>
    <string name="cuj_transformation_test">Transformation APIs Test Case</string>
    <string name="cuj_scene_viewer_test">3D Model Viewer - SceneViewer XR Test Case</string>
    <string name="cuj_standalone_test">Positional Test Case</string>
    <string name="cuj_gltf_model_material_texture_test">GLTF Model Material Texture Test Case</string>
    <string name="cuj_mesh_entity_test">Mesh Entity Test Case</string>
    <string name="cuj_movable_test">AnchorPlacement Test Case</string>
    <string name="cuj_panel_rounded_corner">Rounded Corners Test Case</string>
    <string name="cuj_head_locked_ui_test">Headlocked UI Test Case </string>
    <string name="cuj_input_move_resize_test">InteractableComponent Test Case</string>
    <string name="cuj_movable_component_test">MovableComponent Test Case</string>
    <string name="cuj_resizeable_component_test">ResizableComponent Test Case</string>
    <string name="cuj_spatial_audio_test">Spatial Audio Point Source Test Case</string>
    <string name="cuj_spatial_audio_ambisonic_test">Spatial Audio Ambisonic/SoundField Test Case</string>
    <string name="cuj_spatial_audio_setting_pointsourceparams_test">Spatial Audio Setting PointSourceParams Test Case</string>
    <string name="cuj_spatial_audio_components_test">Spatial Audio Components Test Case</string>
    <string name="cuj_field_of_view_visibility_test">Field Of View Visibility Test Case</string>
    <string name="cuj_hit_test">Digital Hit Test Case</string>
    <string name="cuj_accessibility_test">Accessibility Test Case</string>
    <string name="cuj_surface_entity_custom_mesh_test">Surface Entity Custom Mesh Test Case</string>
    <string name="cuj_surface_entity_imagetest">Surface Entity Image Display Test Case</string>
    <string name="cuj_surface_entity_interaction_test">Surface Entity Interaction Test Case</string>
    <string name="cuj_surface_entity_playbacktest">Surface Entity Playback Test Case</string>
    <string name="dev_memory_leak_test">Memory Leak (Dev) Test Case</string>
    <string name="cuj_panel_coordinates_test">Panel Coordinates Test</string>
    <string name="cuj_gltf_model_animation_test">GLTF Model Animation Test Case</string>
    <string name="cuj_hand_tracking_test">Hand Tracking Test</string>
    <string name="recreate_activity" description="button text to recreate current activity [CHAR LIMIT=40]">Recreate Activity</string>
    <string name="panel_text" description="Arbitrary test string which appears in a TestPanel. [CHAR_LIMIT=30]">Dragons!!</string>
    <string name="pauseSwitch" description="Pause/Play the animations. [CHAR_LIMIT=30]">Pause Animations</string>
    <string name="movePanelSwitch" description="Allows moving the main panel [CHAR_LIMIT=30]">Allow Panel Movement</string>
    <string name="panel_entity_text" description="String indicating that this is a PanelEntity. [CHAR_LIMIT=30]">Panel Entity</string>
    <string name="main_panel_switch_text" description="String indicating that this will update the Main Panel.[CHAR_LIMIT=30]">Main Panel Corner</string>
    <string name="activity_panel_switch_text" description="String indicating that this will update the Activity Panel. [CHAR_LIMIT=30]">Activity Panel Corner</string>
    <string name="panel_entity_switch_text" description="String indicating that this will update the Panel Entity. [CHAR_LIMIT=30]">Panel Entity Corner</string>
    <string name="build_fingerprint_label">Build Fingerprint:</string>
    <string name="build_hardware_label">Hardware:</string>
    <string name="build_date_label">Build Date:</string>
    <string name="cl_number_label" description="Label for the JXRCore CL Number [CHAR LIMIT=30]">JXR Core CL: </string>
    <string name="movable" description="Label for switch that enables main panel move [CHAR_LIMIT=30]">Movable in FSM</string>
    <string name="resizable" description="Label for switch that enables main panel resize [CHAR_LIMIT=30]">Resizable in FSM</string>
    <string name="resize_portrait_fsm" description="Label for change the main panel size [CHAR_LIMIT=30]">Resize in FSM (portrait)</string>
    <string name="resize_landscape_fsm" description="Label for change the main panel size [CHAR_LIMIT=30]">Resize in FSM (landscape)</string>
    <string name="request_fsm" description="Label for button that requests Full Space Mode [CHAR_LIMIT=30]">Request FSM</string>
    <string name="request_hsm" description="Label for button that requests Home Space Mode [CHAR_LIMIT=30]">Request HSM</string>
    <string name="launch_in_fsm" description="Label for button that launches Settings app [CHAR_LIMIT=100]">Launch Settings app in a new task in FSM</string>
    <string name="launch_in_fsm_with_environment_inherited" description="Label for button that launches Settings app with environment inherited (if any) [CHAR_LIMIT=100]">Launch Settings app in a new task in FSM with environment inherited</string>
    <string name="any_aspect_ratio_label" description="Label for the aspect ratio radio button [CHAR LIMIT=50]">Any aspect ratio in HSM</string>
    <string name="portrait_label" description="Label for the aspect ratio radio button [CHAR LIMIT=30]">Portrait</string>
    <string name="landscape_label" description="Label for the aspect ratio radio button [CHAR LIMIT=30]">Landscape</string>
    <string name="radio_label" description="Label for the aspect ratio radio button [CHAR LIMIT=60]">[No-op while in FSM]</string>
    <string name="load_skybox" description="Label for button that loads a skybox [CHAR_LIMIT=30]">Load skybox</string>
    <string name="remove_skybox" description="Label for button that removes a skybox [CHAR_LIMIT=30]">Remove skybox</string>
    <string name="dimensions_label" description="Label for the dimensions returned by the OnBoundsChanged callback of the ActivitySpace[CHAR LIMIT=50]">ActivitySpace Dimensions: </string>
    <string name="main_panel_dimensions_label" description="Label for the dimensions returned by the main panel's getPixelDimensions[CHAR LIMIT=50]">MainPanel Dimensions: </string>
    <string name="movable_panel_text" description="String which appears in a movable TestPanel. [CHAR_LIMIT=30]">Movable Panel</string>
    <string name="stationary_panel_text" description="String which appears in a stationary TestPanel. [CHAR_LIMIT=30]">Stationary Panel</string>
    <string name="system_move_switch_text" description="String indicating panel will be moved by system [CHAR_LIMIT=30]">System Moveable</string>
    <string name="scale_z_switch_text" description="String indicating panel will be scale in Z. [CHAR_LIMIT=30]">Scale In Z</string>
    <string name="anchorable_switch_text" description="String indicating panel will be anchorable. [CHAR_LIMIT=30]">Anchorable</string>
    <string name="parent_switch_text" description="String indicating the if the panel is a child of a panel. [CHAR_LIMIT=30]">Child of Panel</string>
    <string name="plane_semantic" description="text label indicating plane semantic options. [CHAR_LIMIT=30]">Plane Semantic</string>
    <string name="plane_type" description="text label indicating plane type options. [CHAR_LIMIT=30]">Plane Type</string>
    <string name="any" description="Checkbox label for the Any plane semantic and type options. [CHAR_LIMIT=30]">Any</string>
    <string name="wall" description="Checkbox label for the Wall plane semantic option. [CHAR_LIMIT=30]">Wall</string>
    <string name="floor" description="Checkbox label for the Floor plane semantic option. [CHAR_LIMIT=30]">Floor</string>
    <string name="ceiling" description="Checkbox label for the Ceiling plane semantic option. [CHAR_LIMIT=30]">Ceiling</string>
    <string name="table" description="Checkbox label for the Table plane semantic option. [CHAR_LIMIT=30]">Table</string>
    <string name="horizontal" description="Checkbox label for the Horizontal plane Type option. [CHAR_LIMIT=30]">Horizontal</string>
    <string name="vertical" description="Checkbox label for the Vertical plane Type option. [CHAR_LIMIT=30]">Vertical</string>
    <string name="movable_panel_test" description="Label for the main panel. [CHAR_LIMIT=30]">Movable Panel Test</string>
    <string name="enable_movable_component" description="Label for the master switch that enables or disables the MovableComponent functionality on the panel. [CHAR_LIMIT=30]">Enable MovableComponent</string>
    <string name="movable_type_anchorable" description="Radio button label for selecting the Anchorable type of MovableComponent. [CHAR_LIMIT=30]">Anchorable</string>
    <string name="movable_type_system" description="Radio button label for selecting the System Movable type of MovableComponent. [CHAR_LIMIT=30]">System Movable</string>
    <string name="movable_type_custom" description="Radio button label for selecting the Custom Movable type of MovableComponent. [CHAR_LIMIT=30]">Custom Movable</string>
    <string name="custom_behavior" description="Header text for the options that configure the custom behavior of the MovableComponent. [CHAR_LIMIT=30]">Custom Behavior</string>
    <string name="custom_behavior_translation_only" description="Radio button label for the custom behavior that only updates the entity's translation (position). [CHAR_LIMIT=40]">Only update translation</string>
    <string name="custom_behavior_rotation_only" description="Radio button label for the custom behavior that only updates the entity's rotation. [CHAR_LIMIT=40]">Only update rotation</string>
    <string name="movable_label" description="Label for switch that enables main panel move [CHAR_LIMIT=30]">Movable</string>
    <string name="resizable_label" description="Label for switch that enables main panel resize [CHAR_LIMIT=30]">Resizable</string>
    <string name="system_movable_label" description="Label for the aspect ratio radio button [CHAR LIMIT=50]">System Movable</string>
    <string name="scale_in_z_label" description="Label for the aspect ratio radio button [CHAR LIMIT=30]">Scale In Z</string>
    <string name="gltf_movable" description="Label for switch that enables GLTF movable [CHAR_LIMIT=30]">GLTF Movable</string>
    <string name="gltf_resizable" description="Label for switch that enables GLTF resizable [CHAR_LIMIT=30]">GLTF Resizable</string>
    <string name="launch_settings_app_in_fsm">Launch Settings App in a new task in FSM</string>
    <string name="launch_settings_app_in_fsm_with_environment_inherited">Launch Settings App in a new task in FSM with environment inherited</string>
    <string name="fsm_hsm_transition_test">FSM/HSM Transition Test</string>
    <string name="intent_into_scene_viewer">Intent into Scene Viewer</string>
    <string name="image_used_to_test_head_locked_ui" translatable="false">Image used to test head locked UI</string>
    <string name="switch_movable_in_fsm">Movable in FSM</string>
    <string name="switch_resizeable_in_fsm">Resizeable in FSM</string>
</resources>