<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:background="@android:color/black"
      android:textAlignment="center"
      android:textColor="@android:color/white"
      android:textSize="40sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/switch1"/>

  <com.google.android.material.materialswitch.MaterialSwitch
      android:id="@+id/switch1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@android:color/black"
      android:layout_marginStart="20dp"
      android:gravity="center|center_horizontal"
      android:layout_gravity="center"
      android:switchMinWidth="0dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/black"
      android:orientation="horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/switch1"
      app:layout_constraintBottom_toTopOf="@+id/radioGroup1">
    <CheckBox
        android:id="@+id/systemMovable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_movable_label"
        android:visibility="gone" />
    <CheckBox
        android:id="@+id/scaleInZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale_in_z_label"
        android:visibility="gone" />
  </LinearLayout>

  <RadioGroup
      android:id="@+id/radioGroup1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@android:color/black"
      android:checkedButton="@id/radioButton1"
      android:orientation="vertical"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout"
      app:layout_constraintBottom_toBottomOf="parent">

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any_aspect_ratio_label" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portrait_label" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landscape_label" />
  </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
